welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:11: error: not found: value cpt
			cpt += 1	;
                        ^ColumnByColumn:12: error: not found: value cpt
			ecritMessage(cpt);	
                                     ^