welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
	ecritMessage(0);

	while(!posF){
			
			if(estDosMur){
				setPos(getX()+1, 0);
				}else{
					setPos(getX(),getY()+1);
					}
			cpt += 1	;
			ecritMessage(cpt);	
			
	}
}



def posF():Boolean ={
	if( getX()== (getMondeLargeur()-1)  && getY()==(getMondeHauteur()-1)){
		return true
	}else{
		return false
	}
}
